# tjctf-2024-challenges

./: README.md
crypto/accountleak/: challenge.yml  solve.py
crypto/alkane/: challenge.yaml  flag.txt  gje.py  solve.py
crypto/assume/: challenge.yaml  flag.txt  solve.py
crypto/c-8/: challenge.yaml  solve.py  story.txt
crypto/hulksmash/: challenge.yaml  flag.txt  key.txt  solve.py
crypto/iodomethane/: challenge.yaml  flag.txt  solve.py
crypto/lightweight-crypto-guard-system/: challenge.yml  flag.txt  lcghack.py  solve.py
crypto/lithium-stearate/: Makefile  challenge.yaml  flag.txt  key.h  out  output.txt  proc.py  solve  solve.cpp  solve.h
crypto/tetraethyllead/: Makefile  SHA256.cpp  challenge.yaml  howToSolve.txt  r7_z3.py  r7_z3_con.py  sha256.h  solve  solve.cpp  solve.h  solve.py
crypto/titanium-isopropoxide/: alipo.py  challenge.yaml
crypto/u-235/: challenge.yaml  main - Copy.py  main.py  solve.sage
crypto/weird-crypto/: challenge.yaml  solve.py
forensics/conversations/: capture.pcap  challenge.yaml  flag.txt  solve.txt
forensics/minisculest/: challenge.yaml  gen_png_nested.py  heic_basic_reader.py  png_gen.py  rowlet.heic  (+1 more)
rev/stream-complimentary/wasm-flow-free/: Cargo.toml  img_to_board.py  levels.txt  levels_to_binary.py  sprite_sheet_to_arr.py
rev/stream-complimentary/wasm-flow-free/src/: lib.rs
rev/stream-complimentary/wasm-flow-free/src/puzzles/: 0_5x5  1_5x5  2_6x6  3_6x6  4_7x7  5_7x7  6_8x8  7_9x9  8_3x3  9_140x15
rev/stream-complimentary/wasm-flow-free/src/sprites/: 0  1  10  11  12  13  14  15  2  3  4  6  7  8  9
(+208 files in other folders)
